Organize files to make it look neat :p
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="portfolio-hover-content">
                             </div>
                         </div>
-                        <a href="gportrait.html"><img src="img/portfolio-1.jpg" class="img-responsive" alt=""></a>
+                        <a href="portfolio/gportrait.html"><img src="img/portfolio/portfolio-1.jpg" class="img-responsive" alt=""></a>
                     </a>
                     <div class="portfolio-caption">
                         <h4>Portrait</h4> 
@@ -225,7 +225,7 @@
                             <div class="portfolio-hover-content">
                             </div>
                         </div>
-                        <a href="gwed.html"><img src="img/portfolio-2.jpg" class="img-responsive" alt="">
+                        <a href="portfolio/gwed.html"><img src="img/portfolio/portfolio-2.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>wedding</h4>
