--- a/portfolio/gportrait.html
+++ b/portfolio/gportrait.html
@@ -6,8 +6,8 @@
    
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
  
-      <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="css/gallery.css">
+      <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="../css/gallery.css">
  
    
 </head>
@@ -28,7 +28,7 @@
             <a href="#" class="close"></a>
             <li>
                 <a href="#item01">
-                    <img src="img/portfolio-1.jpg" alt="">
+                    <img src="../img/portfolio/portfolio-1.jpg" alt="">
                 </a>
             </li>
  
@@ -44,7 +44,7 @@
     <div id="item01" class="port">
      
         <div class="row">
-                <img src="img/portfolio-1.jpg" alt="">
+                <img src="../img/portfolio/portfolio-1.jpg" alt="">
         </div> <!-- / row -->
  
     </div> <!-- / Item 02 -->
@@ -65,7 +65,7 @@
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
  
-    <script  src="js/gallery.js"></script>
+    <script  src="../js/gallery.js"></script>
  
 </body>
 </html>
