fix issues with gallery
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/portfolio/gportrait.html
+++ b/portfolio/gportrait.html
@@ -27,36 +27,18 @@
         <ul>
             <a href="#" class="close"></a>
             <li>
-                <a href="#item01">
+                <a href="../img/portfolio/portfolio-1.jpg">
                     <img src="../img/portfolio/portfolio-1.jpg" alt="">
                 </a>
             </li>
  
             <li>
-                <a href="#item02">
+                <a href="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B">
                     <img src="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B" alt="">
                 </a>
             </li>
         </ul>
     </div> <!-- / row -->
-
-    <!-- Item 01 -->
-    <div id="item01" class="port">
-     
-        <div class="row">
-                <img src="../img/portfolio/portfolio-1.jpg" alt="">
-        </div> <!-- / row -->
- 
-    </div> <!-- / Item 02 -->
- 
-    <!-- Item 02 -->
-    <div id="item02" class="port">
-     
-        <div class="row">
-            <img src="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B" alt="">
-        </div> <!-- / row -->
- 
-    </div> <!-- / Item 02 -->
  
 </section> <!-- / projects -->
 
