add github link
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <ul class="list-inline social-buttons">
                         <li><a href="https://www.facebook.com/paulvideos.poly"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/paulvideos/paulvideos.github.io"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
