--- a/index.html
+++ b/index.html
@@ -309,22 +309,22 @@
         </div>
             <div class="row">
                 <div class="col-md-5 col-md-push-2">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form action="https://formspree.io/paulvideoz@gmail.com" method="post" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name here.">
+                                    <input type="text" class="form-control" name="name" placeholder="Name" id="name" required data-validation-required-message="Please enter your name here.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Please enter your email here.">
+                                    <input type="email" class="form-control" name="email" placeholder="Email" id="email" required data-validation-required-message="Please enter your email here.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Phone number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" name="phone" placeholder="Phone number" id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Message" rows="5" id="message" required data-validation-required-message="Please enter your message."></textarea>
+                                    <textarea class="form-control" name="message" placeholder="Message" rows="5" id="message" required data-validation-required-message="Please enter your message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
 			     </div>
