--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
         </div>
             <div class="row">
                 <div class="col-md-5 col-md-push-2">
-                    <form action="https://formspree.io/paulvideoz@gmail.com" method="post" name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" method="POST" novalidate>
                         <div class="row">
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="name" placeholder="Name" id="name" required data-validation-required-message="Please enter your name here.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Email" id="email" required data-validation-required-message="Please enter your email here.">
+                                    <input type="email" class="form-control" name="_replyto" placeholder="Email" id="email" required data-validation-required-message="Please enter your email here.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -327,6 +327,8 @@
                                     <textarea class="form-control" name="message" placeholder="Message" rows="5" id="message" required data-validation-required-message="Please enter your message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
+				<input type="hidden" name="_next" value="https://paulvideos.github.io/" />
+				<input type="text" name="_gotcha" style="display:none" />
 			     </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
