rework on services
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Photography</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">We create Creative and Passionate moments. We bring the Best of Portrait Photography to you.</p>
                 </div>
                 <div class="col-md-3">
                     <span class="fa-stack fa-4x">
@@ -174,7 +174,7 @@
                         <i class="fa fa-video-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Videography</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">We capture art thats tells the story from your wedding day.</p>
                 </div>
                 <div class="col-md-3">
                     <span class="fa-stack fa-4x">
@@ -182,16 +182,15 @@
                         <i class="fa fa-picture-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Albums</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">We provides custom wedding album design services , wedding photo books and wedding albums.</p>
                 </div>
                  <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-plane fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-film fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading"></h4>
-                    <!--<h4 class="service-heading">Hospedagens</h4>-->
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Wedding Films</h4>
+                    <p class="text-muted">Your wedding memories are made more vivid by our creativity , experience and quality.</p>
             </div>
         </div>
     </section>
