Add model img function to gallery using lightbox
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/portfolio/gportrait.html
+++ b/portfolio/gportrait.html
@@ -8,8 +8,8 @@
  
       <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="../css/gallery.css">
- 
-   
+      <link rel="stylesheet" href="../css/lightbox.css">
+
 </head>
  
 <body>
@@ -25,15 +25,14 @@
 <section class="gallery">
     <div class="row">
         <ul>
-            <a href="#" class="close"></a>
             <li>
-                <a href="../img/portfolio/portfolio-1.jpg">
+                <a href="../img/portfolio/portfolio-1.jpg" data-lightbox="portrait">
                     <img src="../img/portfolio/portfolio-1.jpg" alt="">
                 </a>
             </li>
  
             <li>
-                <a href="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B">
+                <a href="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B" data-lightbox="portrait">
                     <img src="https://scontent.fcok1-1.fna.fbcdn.net/v/t1.0-9/17903361_1244362332299122_2977678089954453798_n.jpg?oh=15be805ed07af7b926dfe54c2fd98604&oe=5ADBB84B" alt="">
                 </a>
             </li>
@@ -48,6 +47,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
  
     <script  src="../js/gallery.js"></script>
+    <script  src="../js/lightbox.min.js"></script>
  
 </body>
 </html>
