--- a/portfolio/gwed.html
+++ b/portfolio/gwed.html
@@ -8,8 +8,8 @@
  
       <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="../css/gallery.css">
- 
-   
+      <link rel="stylesheet" href="../css/lightbox.css">
+
 </head>
  
 <body>
@@ -27,19 +27,19 @@
         <ul>
             <a href="#" class="close"></a>
             <li>
-                <a href="../img/portfolio/portfolio-2.jpg">
+                <a href="../img/portfolio/portfolio-2.jpg" data-lightbox="wed">
                     <img src="../img/portfolio/portfolio-2.jpg" alt="">
                 </a>
             </li>
  
             <li>
-                <a href="../img/portfolio/portfolio-3.jpg">
+                <a href="../img/portfolio/portfolio-3.jpg" data-lightbox="wed">
                     <img src="../img/portfolio/portfolio-3.jpg" alt="">
                 </a>
             </li>
 
             <li>
-                <a href="../img/portfolio/portfolio-4.jpg">
+                <a href="../img/portfolio/portfolio-4.jpg" data-lightbox="wed">
                     <img src="../img/portfolio/portfolio-4.jpg" alt="">
                 </a>
             </li>
@@ -54,6 +54,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
  
     <script  src="../js/gallery.js"></script>
+    <script  src="../js/lightbox.min.js"></script>
  
 </body>
 </html>
