--- a/portfolio/gwed.html
+++ b/portfolio/gwed.html
@@ -51,10 +51,10 @@
   <a class="goback" href="javascript:history.go(-1)"><i class="fa fa-backward"></i></a>
   <p id="text">Go Back</p>
 
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  
     <script  src="../js/gallery.js"></script>
-    <script  src="../js/lightbox.min.js"></script>
+    <script  src="../js/lightbox.js"></script>
  
 </body>
 </html>
